--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -124,12 +124,6 @@ jobs:
       run: stack build Agda-${{ matrix.agda }}
       shell: bash
 
-    # To avoid locked .agdai files when building the site,
-    # we precompile the .agdai files of the standard library.
-    - name: Build standard-library
-      run: stack exec --cwd standard-library agda -- -i . -i src Everything.agda
-      shell: bash
-
     - name: Build Pandoc
       if: steps.cache-site-builder.outputs.cache-hit != 'true'
       run: stack build pandoc
@@ -145,13 +139,19 @@ jobs:
       run: stack build
       shell: bash
 
+    # # To avoid locked .agdai files when building the site,
+    # # we precompile the .agdai files of the standard library.
+    # - name: Build standard-library
+    #   run: stack exec --cwd standard-library agda -- -i . -i src Everything.agda
+    #   shell: bash
 
-    # Build & Test Website
 
-    - name: Build Website
-      run: make build
-      shell: bash
+    # # Build & Test Website
 
-    - name: Test Website
-      run: make test
-      shell: bash
+    # - name: Build Website
+    #   run: make build
+    #   shell: bash
+
+    # - name: Test Website
+    #   run: make test
+    #   shell: bash
